"Updated execution counts and added joblib import and model saving/loading code"

--- a/ML/linear_regression/linear_regression_multivariate.ipynb
+++ b/ML/linear_regression/linear_regression_multivariate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f0860d6f-1197-47a0-a8b6-0c18633925ac",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn import linear_model\n",
-    "from word2number import w2n"
+    "from word2number import w2n\n",
+    "import joblib"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "59e6f6ce-9d99-4753-8539-7043769c3735",
    "metadata": {},
    "outputs": [
@@ -95,7 +96,7 @@
        "4      seven                    9.0                           6      70000"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b6e14024-d292-4f76-afab-e699556f3956",
    "metadata": {},
    "outputs": [],
@@ -118,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "ee3dead4-12dc-4c92-a48b-a3b1c220078d",
    "metadata": {},
    "outputs": [
@@ -198,7 +199,7 @@
        "4      seven                    9.0                           6      70000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "962e9125-70f2-4b74-b04f-531b746642a2",
    "metadata": {},
    "outputs": [
@@ -224,7 +225,7 @@
        "Name: experience, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,39 +236,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "62307658-d267-4ee3-ac21-cc02f2562d94",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 0, 5, 2, 7, 3, 10, 11]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0    0\n",
+       "1    0\n",
+       "2    5\n",
+       "3    2\n",
+       "4    7\n",
+       "Name: experience, dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test = []\n",
-    "for num in df['experience']:\n",
-    "    test.append(w2n.word_to_num(num))\n",
-    "print(test)\n",
-    "# The easier way: df.experience = df.experience.apply(w2n.word_to_num)"
+    "df.experience = df.experience.apply(w2n.word_to_num)\n",
+    "df.experience.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "e950c4c7-fcb3-4a74-8bdc-5b8fc9e461eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['experience'] = test"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "bdfa5c8a-6495-46f1-b989-b26dcb33fc52",
    "metadata": {},
    "outputs": [
@@ -347,7 +343,7 @@
        "4           7                    9.0                           6      70000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -358,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "e13fef88-9321-4801-b88f-f591619c578a",
    "metadata": {},
    "outputs": [
@@ -462,7 +458,7 @@
        "7          11                    7.0                           8      80000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "a4648a42-4140-484d-bec5-f3d8b4b9d989",
    "metadata": {},
    "outputs": [],
@@ -483,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "0184187c-9083-4b34-95df-42130e5cca2c",
    "metadata": {},
    "outputs": [
@@ -501,7 +497,7 @@
        "Name: test_score(out of 10), dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "02267f4d-5546-4f0c-9f99-57e7ebf0b2a1",
    "metadata": {},
    "outputs": [],
@@ -522,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "4c555178-19bb-410f-ab0c-889295f3abe7",
    "metadata": {},
    "outputs": [
@@ -626,7 +622,7 @@
        "7          11                    7.0                           8      80000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "7dd734d4-00be-410b-a7f0-49641ed90e6a",
    "metadata": {},
    "outputs": [],
@@ -647,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "541b5c63-6ed6-44c4-895e-c1fddce3d53b",
    "metadata": {},
    "outputs": [
@@ -1064,7 +1060,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1075,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "44c066c5-7fc7-494d-988d-8a60b9a5cc68",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "50741a24-042d-4ae7-924b-8337805fb194",
    "metadata": {},
    "outputs": [
@@ -1142,7 +1138,7 @@
        "1          12                     10                          10"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1153,8 +1149,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "c5f26f03-8512-4d5e-bf54-50c431792606",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([53205.96797671, 92002.18340611])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg.predict(df_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "71060c81-3250-4e6e-b3bd-15ab7edda849",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(8.0)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_score_median"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1dddbba2-3f9d-448d-9739-01e494e2832b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['model_joblib']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(reg, 'model_joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6b69e087-28ec-4ea1-95ce-fae271cb241d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mj = joblib.load('model_joblib')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "bf66fe89-94d2-4d84-9754-481030561909",
    "metadata": {},
    "outputs": [
     {
@@ -1169,34 +1238,13 @@
     }
    ],
    "source": [
-    "reg.predict(df_predictions)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "71060c81-3250-4e6e-b3bd-15ab7edda849",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "np.float64(8.0)"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_score_median"
+    "mj.predict(df_predictions)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1dddbba2-3f9d-448d-9739-01e494e2832b",
+   "id": "419dccbb-2ac9-4d18-bbfe-926cc3b65a9d",
    "metadata": {},
    "outputs": [],
    "source": []
